@@ -3,6 +3,7 @@ package org.synyx.urlaubsverwaltung.department.api;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -12,11 +13,18 @@ import org.synyx.urlaubsverwaltung.department.DepartmentService;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
+import static org.springframework.hateoas.MediaTypes.HAL_JSON_VALUE;
+import static org.springframework.http.HttpStatus.OK;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.synyx.urlaubsverwaltung.security.SecurityRules.IS_OFFICE;
 
+@Tag(
+    name = "departments",
+    description = """
+        Departments: Returns information about the departments
+        """
+)
 @RestControllerAdviceMarker
-@Tag(name = "departments", description = "Departments: Get information about the departments of the application")
 @RestController
 @RequestMapping("/api")
 public class DepartmentApiController {
@@ -28,16 +36,26 @@ public class DepartmentApiController {
         this.departmentService = departmentService;
     }
 
-    @Operation(summary = "Get all departments of the application", description = "Get all departments of the application")
-    @GetMapping("/departments")
+    @Operation(
+        summary = "Returns all departments",
+        description = """
+            Returns all departments.
+
+            Needed basic authorities:
+            * user
+
+            Needed additional authorities:
+            * office
+            """)
+    @GetMapping(value = "/departments", produces = {APPLICATION_JSON_VALUE, HAL_JSON_VALUE})
     @PreAuthorize(IS_OFFICE)
-    public DepartmentsDto departments() {
+    public ResponseEntity<DepartmentsDto> departments() {
 
         final List<DepartmentDto> departments = departmentService.getAllDepartments()
             .stream()
             .map(DepartmentDto::new)
-            .collect(toList());
+            .toList();
 
-        return new DepartmentsDto(departments);
+        return new ResponseEntity<>(new DepartmentsDto(departments), OK);
     }
 }
