@@ -10,7 +10,6 @@ import java.util.Map;
 import java.util.function.Consumer;
 
 import static java.util.function.Predicate.not;
-import static java.util.stream.Collectors.toList;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_APPLICATION_ALLOWED;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_APPLICATION_APPLIED;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_APPLICATION_CANCELLATION;
@@ -38,8 +37,16 @@ import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_E
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_OVERTIME_APPLIED_BY_MANAGEMENT;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_OVERTIME_MANAGEMENT_APPLIED;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_PERSON_NEW_MANAGEMENT_ALL;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_ACCEPTED_BY_MANAGEMENT_TO_USER;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_ACCEPTED_BY_MANAGEMENT_TO_MANAGEMENT;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_CANCELLED_BY_MANAGEMENT;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CANCELLED;
 import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CREATED;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT_TO_MANAGEMENT;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_EDITED_BY_MANAGEMENT;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_MANAGEMENT;
+import static org.synyx.urlaubsverwaltung.person.MailNotification.NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_USER;
 
 final class PersonNotificationsMapper {
 
@@ -60,10 +67,16 @@ final class PersonNotificationsMapper {
         addIfActive(mailNotifications, personNotificationsDto.getApplicationWaitingReminderForManagement(), NOTIFICATION_EMAIL_APPLICATION_MANAGEMENT_WAITING_REMINDER);
         addIfActive(mailNotifications, personNotificationsDto.getApplicationCancellationRequestedForManagement(), NOTIFICATION_EMAIL_APPLICATION_MANAGEMENT_CANCELLATION_REQUESTED);
 
-        final List<MailNotification> notificationEmailApplications = List.of(NOTIFICATION_EMAIL_APPLICATION_APPLIED,
-            NOTIFICATION_EMAIL_APPLICATION_ALLOWED, NOTIFICATION_EMAIL_APPLICATION_REVOKED, NOTIFICATION_EMAIL_APPLICATION_REJECTED,
-            NOTIFICATION_EMAIL_APPLICATION_TEMPORARY_ALLOWED, NOTIFICATION_EMAIL_APPLICATION_CANCELLATION, NOTIFICATION_EMAIL_APPLICATION_EDITED,
-            NOTIFICATION_EMAIL_APPLICATION_CONVERTED);
+        final List<MailNotification> notificationEmailApplications = List.of(
+            NOTIFICATION_EMAIL_APPLICATION_APPLIED,
+            NOTIFICATION_EMAIL_APPLICATION_ALLOWED,
+            NOTIFICATION_EMAIL_APPLICATION_REVOKED,
+            NOTIFICATION_EMAIL_APPLICATION_REJECTED,
+            NOTIFICATION_EMAIL_APPLICATION_TEMPORARY_ALLOWED,
+            NOTIFICATION_EMAIL_APPLICATION_CANCELLATION,
+            NOTIFICATION_EMAIL_APPLICATION_EDITED,
+            NOTIFICATION_EMAIL_APPLICATION_CONVERTED
+        );
         addIfActive(mailNotifications, personNotificationsDto.getApplicationAppliedAndChanges(), notificationEmailApplications);
         addIfActive(mailNotifications, personNotificationsDto.getApplicationUpcoming(), NOTIFICATION_EMAIL_APPLICATION_UPCOMING);
         addIfActive(mailNotifications, personNotificationsDto.getHolidayReplacement(), NOTIFICATION_EMAIL_APPLICATION_HOLIDAY_REPLACEMENT);
@@ -73,14 +86,29 @@ final class PersonNotificationsMapper {
         addIfActive(mailNotifications, personNotificationsDto.getOvertimeAppliedByManagement(), NOTIFICATION_EMAIL_OVERTIME_APPLIED_BY_MANAGEMENT);
         addIfActive(mailNotifications, personNotificationsDto.getOvertimeApplied(), NOTIFICATION_EMAIL_OVERTIME_APPLIED);
 
-        final List<MailNotification> notificationEmailAbsenceColleagues = List.of(NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_ALLOWED, NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_CANCELLATION,
-            NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CREATED, NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CANCELLED);
+        final List<MailNotification> notificationEmailAbsenceColleagues = List.of(
+            NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_ALLOWED,
+            NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_CANCELLATION,
+            NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CREATED,
+            NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CANCELLED
+        );
         addIfActive(mailNotifications, personNotificationsDto.getAbsenceForColleagues(), notificationEmailAbsenceColleagues);
+
+        final List<MailNotification> notificationEmailOwnSickNote = List.of(
+            NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_USER,
+            NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT,
+            NOTIFICATION_EMAIL_SICK_NOTE_EDITED_BY_MANAGEMENT,
+            NOTIFICATION_EMAIL_SICK_NOTE_CANCELLED_BY_MANAGEMENT
+        );
+        addIfActive(mailNotifications, personNotificationsDto.getOwnSickNoteSubmittedCreatedEditedCancelled(), notificationEmailOwnSickNote);
+        addIfActive(mailNotifications, personNotificationsDto.getSickNoteCreatedByManagementForManagement(), NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT_TO_MANAGEMENT);
+        addIfActive(mailNotifications, personNotificationsDto.getSickNoteSubmittedByUserForManagement(), NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_MANAGEMENT);
+        addIfActive(mailNotifications, personNotificationsDto.getSickNoteAcceptedByManagementForManagement(), NOTIFICATION_EMAIL_SICK_NOTE_ACCEPTED_BY_MANAGEMENT_TO_MANAGEMENT);
 
         return mailNotifications;
     }
 
-    static PersonNotificationsDto mapToPersonNotificationsDto(Person person) {
+    static PersonNotificationsDto mapToPersonNotificationsDto(Person person, boolean userIsAllowedToSubmitSickNotes) {
 
         final List<MailNotification> activePersonMailNotifications = new ArrayList<>(person.getNotifications());
         final PersonNotificationsDto personNotificationsDto = new PersonNotificationsDto();
@@ -102,6 +130,11 @@ final class PersonNotificationsMapper {
         setterByNotification.put(NOTIFICATION_EMAIL_APPLICATION_HOLIDAY_REPLACEMENT_UPCOMING, personNotificationsDto::setHolidayReplacementUpcoming);
         setterByNotification.put(NOTIFICATION_EMAIL_OVERTIME_APPLIED, personNotificationsDto::setOvertimeApplied);
         setterByNotification.put(NOTIFICATION_EMAIL_OVERTIME_APPLIED_BY_MANAGEMENT, personNotificationsDto::setOvertimeAppliedByManagement);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_USER, personNotificationsDto::setOwnSickNoteSubmittedCreatedEditedCancelled);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT, personNotificationsDto::setOwnSickNoteSubmittedCreatedEditedCancelled);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_EDITED_BY_MANAGEMENT, personNotificationsDto::setOwnSickNoteSubmittedCreatedEditedCancelled);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_ACCEPTED_BY_MANAGEMENT_TO_USER, personNotificationsDto::setOwnSickNoteSubmittedCreatedEditedCancelled);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_CANCELLED_BY_MANAGEMENT, personNotificationsDto::setOwnSickNoteSubmittedCreatedEditedCancelled);
 
         // department notifications
         setterByNotification.put(NOTIFICATION_EMAIL_APPLICATION_MANAGEMENT_APPLIED, personNotificationsDto::setApplicationAppliedForManagement);
@@ -117,12 +150,15 @@ final class PersonNotificationsMapper {
         setterByNotification.put(NOTIFICATION_EMAIL_OVERTIME_MANAGEMENT_APPLIED, personNotificationsDto::setOvertimeAppliedForManagement);
         setterByNotification.put(NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_ALLOWED, personNotificationsDto::setAbsenceForColleagues);
         setterByNotification.put(NOTIFICATION_EMAIL_APPLICATION_COLLEAGUES_CANCELLATION, personNotificationsDto::setAbsenceForColleagues);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_CREATED_BY_MANAGEMENT_TO_MANAGEMENT, personNotificationsDto::setSickNoteCreatedByManagementForManagement);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_SUBMITTED_BY_USER_TO_MANAGEMENT, personNotificationsDto::setSickNoteSubmittedByUserForManagement);
+        setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_ACCEPTED_BY_MANAGEMENT_TO_MANAGEMENT, personNotificationsDto::setSickNoteAcceptedByManagementForManagement);
         setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CREATED, personNotificationsDto::setAbsenceForColleagues);
         setterByNotification.put(NOTIFICATION_EMAIL_SICK_NOTE_COLLEAGUES_CANCELLED, personNotificationsDto::setAbsenceForColleagues);
 
         for (MailNotification mailNotificationToCheck : MailNotification.values()) {
             final boolean departmentRelated = mailNotificationToCheck.isDepartmentRelated();
-            final boolean isVisible = mailNotificationToCheck.isValidWith(person.getPermissions());
+            final boolean isVisible = mailNotificationToCheck.isValidWith(person.getPermissions()) && (!mailNotificationToCheck.isSickNoteSubmissionRelated() || userIsAllowedToSubmitSickNotes);
             final boolean isActive = activePersonMailNotifications.contains(mailNotificationToCheck);
             setterByNotification.get(mailNotificationToCheck).accept(new PersonNotificationDtoDepartmentAware(departmentRelated, isVisible, isActive));
         }
@@ -147,14 +183,15 @@ final class PersonNotificationsMapper {
             personNotificationsDto.getHolidayReplacement(),
             personNotificationsDto.getHolidayReplacementUpcoming(),
             personNotificationsDto.getOvertimeAppliedByManagement(),
-            personNotificationsDto.getOvertimeApplied()
+            personNotificationsDto.getOvertimeApplied(),
+            personNotificationsDto.getOwnSickNoteSubmittedCreatedEditedCancelled()
         );
 
         final List<PersonNotificationDtoDepartmentAware> visiblePersonal = dtoPersonalNotifications.stream()
             .map(PersonNotificationDtoDepartmentAware.class::cast)
             .filter(not(PersonNotificationDtoDepartmentAware::isDepartmentAware))
             .filter(PersonNotificationDto::isVisible)
-            .collect(toList());
+            .toList();
 
         final long visiblePersonalCount = visiblePersonal.size();
         final long activePersonalCount = visiblePersonal.stream().filter(PersonNotificationDto::isActive).count();
@@ -173,14 +210,17 @@ final class PersonNotificationsMapper {
             personNotificationsDto.getApplicationWaitingReminderForManagement(),
             personNotificationsDto.getApplicationCancellationRequestedForManagement(),
             personNotificationsDto.getOvertimeAppliedForManagement(),
-            personNotificationsDto.getAbsenceForColleagues()
+            personNotificationsDto.getAbsenceForColleagues(),
+            personNotificationsDto.getSickNoteCreatedByManagementForManagement(),
+            personNotificationsDto.getSickNoteSubmittedByUserForManagement(),
+            personNotificationsDto.getSickNoteAcceptedByManagementForManagement()
         );
 
         final List<PersonNotificationDtoDepartmentAware> visibleDepartment = dtoDepartmentNotifications.stream()
             .map(PersonNotificationDtoDepartmentAware.class::cast)
             .filter(PersonNotificationDtoDepartmentAware::isDepartmentAware)
             .filter(PersonNotificationDto::isVisible)
-            .collect(toList());
+            .toList();
 
         final long visibleDepartmentCount = visibleDepartment.size();
         final long activeDepartmentCount = visibleDepartment.stream().filter(PersonNotificationDto::isActive).count();
